@@ -37,7 +37,7 @@ void FindMatches(
 		int pairedEnd,
 		int maxKeyMatches,
 		int maxNumMatches,
-		int forwardStrandOnly,
+		int whichStrand,
 		int numThreads,
 		char *outputID,
 		char *outputDir,
@@ -257,7 +257,7 @@ void FindMatches(
 			pairedEnd,
 			maxKeyMatches,
 			maxNumMatches,
-			forwardStrandOnly,
+			whichStrand,
 			numThreads,
 			&tempSeqFPs,
 			&tempSeqFileNames,
@@ -301,7 +301,7 @@ void FindMatches(
 					pairedEnd,
 					maxKeyMatches,
 					maxNumMatches,
-					forwardStrandOnly,
+					whichStrand,
 					numThreads,
 					&tempSeqFPs,
 					&tempSeqFileNames,
@@ -436,7 +436,7 @@ int FindMatchesInIndexes(char **indexFileNames,
 		int pairedEnd,
 		int maxKeyMatches,
 		int maxNumMatches,
-		int forwardStrandOnly,
+		int whichStrand,
 		int numThreads,
 		FILE ***tempSeqFPs,
 		char ***tempSeqFileNames,
@@ -532,7 +532,7 @@ int FindMatchesInIndexes(char **indexFileNames,
 				pairedEnd,
 				maxKeyMatches,
 				maxNumMatches,
-				forwardStrandOnly,
+				whichStrand,
 				numThreads,
 				tempSeqFPs,
 				tempOutputIndexFPs[i],
@@ -681,7 +681,7 @@ int FindMatchesInIndex(char *indexFileName,
 		int pairedEnd,
 		int maxKeyMatches,
 		int maxNumMatches,
-		int forwardStrandOnly,
+		int whichStrand,
 		int numThreads,
 		FILE ***tempSeqFPs,
 		FILE *indexFP,
@@ -789,7 +789,7 @@ int FindMatchesInIndex(char *indexFileName,
 		data[i].pairedEnd = pairedEnd;
 		data[i].maxKeyMatches = maxKeyMatches;
 		data[i].maxNumMatches = maxNumMatches;
-		data[i].forwardStrandOnly = forwardStrandOnly;
+		data[i].whichStrand = whichStrand;
 		data[i].threadID = i;
 	}
 
@@ -918,7 +918,7 @@ void *FindMatchesInIndexThread(void *arg)
 	int pairedEnd = data->pairedEnd;
 	int maxKeyMatches = data->maxKeyMatches;
 	int maxNumMatches = data->maxNumMatches;
-	int forwardStrandOnly = data->forwardStrandOnly;
+	int whichStrand = data->whichStrand;
 	int threadID = data->threadID;
 	data->numMatches = 0;
 
@@ -956,7 +956,7 @@ void *FindMatchesInIndexThread(void *arg)
 				numGapDeletions,
 				maxKeyMatches,
 				maxNumMatches,
-				forwardStrandOnly);
+				whichStrand);
 		if(pairedEnd==1) {
 			RGReadsFindMatches(index,
 					rg,
@@ -971,7 +971,7 @@ void *FindMatchesInIndexThread(void *arg)
 					numGapDeletions,
 					maxKeyMatches,
 					maxNumMatches,
-				forwardStrandOnly);
+					whichStrand);
 		}
 
 		if((0 < m.matchOne.numEntries && 1 != m.matchOne.maxReached ) ||
