@@ -60,7 +60,7 @@ enum {
 	DescInputFilesTitle, DescRGFileName, DescBfastMainIndexesFileName, DescBfastSecondaryIndexesFileName, DescReadsFileName, DescOffsetsFileName, 
 	DescAlgoTitle, DescSpace, DescStartReadNum, DescEndReadNum, 
 	DescNumMismatches, DescNumDeletions, DescNumInsertions, DescNumGapDeletions, DescNumGapInsertions, 
-	DescMaxKeyMatches, DescMaxTotalMatches, DescForwardStrandOnly, DescPairedEnd, DescNumThreads, 
+	DescMaxKeyMatches, DescMaxTotalMatches, DescWhichStrand, DescPairedEnd, DescNumThreads, 
 	DescOutputTitle, DescOutputID, DescOutputDir, DescTmpDir, DescTiming,
 	DescMiscTitle, DescParameters, DescHelp
 };
@@ -91,7 +91,7 @@ static struct argp_option options[] = {
 	{"numGapInsertions", 'Z', "numGapInsertions", 0, "Specifies the number of insertions allowed in the gap between pairs", 2},
 	{"maxKeyMatches", 'K', "maxKeyMatches", 0, "Specifies the maximum number of matches to allow before a key is ignored", 2},
 	{"maxNumMatches", 'M', "maxNumMatches", 0, "Specifies the maximum total number of matches to consider before the read is discarded", 2},
-	{"forwardStrandOnly", 'f', 0, OPTION_NO_USAGE, "Specifies that only matches to the forward strand should be considered", 2},
+	{"whichStrand", 'w', "whichStrand", 0, "0: consider both strands 1: forward strand only 2: reverse strand only", 2},
 	{"pairedEnd", '2', 0, OPTION_NO_USAGE, "Specifies that paired end data is to be expected", 2},
 	{"numThreads", 'n', "numThreads", 0, "Specifies the number of threads to use (Default 1", 2},
 	{0, 0, 0, 0, "=========== Output Options ==========================================================", 3},
@@ -126,7 +126,7 @@ static struct argp argp = {options, parse_opt, args_doc, doc};
 #else
 /* argp.h support not available! Fall back to getopt */
 static char OptionString[]=
-"d:e:i:m:n:o:r:s:x:y:z:A:I:K:M:O:R:T:Y:Z:2fhpt";
+"d:e:i:m:n:o:r:s:w:x:y:z:A:I:K:M:O:R:T:Y:Z:2hpt";
 #endif
 
 enum {ExecuteGetOptHelp, ExecuteProgram, ExecutePrintProgramParameters};
@@ -196,7 +196,7 @@ main (int argc, char **argv)
 								arguments.pairedEnd,
 								arguments.maxKeyMatches,
 								arguments.maxNumMatches,
-								arguments.forwardStrandOnly,
+								arguments.whichStrand,
 								arguments.numThreads,
 								arguments.outputID,
 								arguments.outputDir,
@@ -329,6 +329,12 @@ int ValidateInputs(struct arguments *args) {
 	if(args->maxNumMatches < 0) {
 		PrintError(FnName, "maxNumMatches", "Command line argument", Exit, OutOfRange);
 	}
+			
+	if(!(args->whichStrand == BothStrands || 
+				args->whichStrand == ForwardStrand || 
+				args->whichStrand == ReverseStrand)) {
+		PrintError(FnName, "whichStrand", "Command line argument", Exit, OutOfRange);
+	}
 
 	if(args->numThreads<=0) {
 		PrintError(FnName, "numThreads", "Command line argument", Exit, OutOfRange);
@@ -356,7 +362,6 @@ int ValidateInputs(struct arguments *args) {
 	}
 
 	/* If this does not hold, we have done something wrong internally */
-	assert(args->forwardStrandOnly == BothStrands || args->forwardStrandOnly == ForwardStrandOnly);
 	assert(args->timing == 0 || args->timing == 1);
 	assert(args->binaryInput == TextInput || args->binaryInput == BinaryInput);
 	assert(args->binaryOutput == TextOutput || args->binaryOutput == BinaryOutput);
@@ -410,7 +415,7 @@ AssignDefaultValues(struct arguments *args)
 	args->pairedEnd = 0;
 	args->maxKeyMatches = INT_MAX;
 	args->maxNumMatches = INT_MAX;
-	args->forwardStrandOnly = BothStrands;
+	args->whichStrand = BothStrands;
 	args->numThreads = 1;
 
 	args->outputID =
@@ -440,7 +445,7 @@ AssignDefaultValues(struct arguments *args)
 PrintProgramParameters(FILE* fp, struct arguments *args)
 {
 	char programmode[3][64] = {"ExecuteGetOptHelp", "ExecuteProgram", "ExecutePrintProgramParameters"};
-	char whichStrand[2][64] = {"Both strands", "Forward strand only"};
+	char whichStrand[3][64] = {"BothStrands", "ForwardStrand", "ReverseStrand"};
 	fprintf(fp, BREAK_LINE);
 	fprintf(fp, "Printing Program Parameters:\n");
 	fprintf(fp, "programMode:\t\t\t\t%d\t[%s]\n", args->programMode, programmode[args->programMode]);
@@ -463,7 +468,7 @@ PrintProgramParameters(FILE* fp, struct arguments *args)
 	fprintf(fp, "pairedEnd:\t\t\t\t%d\n", args->pairedEnd);
 	fprintf(fp, "maxKeyMatches:\t\t\t\t%d\n", args->maxKeyMatches);
 	fprintf(fp, "maxNumMatches:\t\t\t\t%d\n", args->maxNumMatches);
-	fprintf(fp, "forwardStrandOnly:\t\t\t%d\t[%s]\n", args->forwardStrandOnly, whichStrand[args->forwardStrandOnly]);
+	fprintf(fp, "whichStrand:\t\t\t%d\t[%s]\n", args->whichStrand, whichStrand[args->whichStrand]);
 	fprintf(fp, "numThreads:\t\t\t\t%d\n", args->numThreads);
 	fprintf(fp, "outputID:\t\t\t\t%s\n", args->outputID);
 	fprintf(fp, "outputDir:\t\t\t\t%s\n", args->outputDir);
@@ -556,8 +561,6 @@ parse_opt (int key, char *arg, struct argp_state *state)
 						break;
 					case 'e':
 						arguments->endReadNum = atoi(OPTARG);break;
-					case 'f':
-						arguments->forwardStrandOnly = ForwardStrandOnly;break;
 					case 'h':
 						arguments->programMode=ExecuteGetOptHelp; break;
 					case 'i':
@@ -577,6 +580,8 @@ parse_opt (int key, char *arg, struct argp_state *state)
 						arguments->startReadNum = atoi(OPTARG);break;
 					case 't':
 						arguments->timing = 1;break;
+					case 'w':
+						arguments->whichStrand = atoi(OPTARG);break;
 					case 'x':
 						arguments->numMismatches=atoi(OPTARG);break;
 					case 'y':
