@@ -20,7 +20,7 @@ struct arguments
 	int numGapDeletions;					/* -Z */
 	int maxKeyMatches;						/* -K */
 	int maxNumMatches;						/* -M */
-	int forwardStrandOnly;					/* -f */
+	int whichStrand;						/* -w */
 	int pairedEnd;							/* -2 */
 	int numThreads;							/* -n */
 	char *outputID;							/* -o */
